--- a/template/style.css
+++ b/template/style.css
@@ -37,19 +37,6 @@
   vertical-align:top;
 }
 
-.my-warnings {
-  background-image:none;
-  display:inline-block;
-  min-height:0;
-  padding:5px 5px 0 5px;
-  margin:0 5px 15px 5px;
-  font-weight:normal;
-  font-size:0.9em;
-}
-.my-warnings ul li {
-  list-style:none;
-}
-
 .selectize-control {
   width:300px;
   display:inline-block;
@@ -73,6 +60,6 @@ table.colors {
 }
 
 .preview {
-  display:none;
+  /display:none;
   margin-left:200px;
 }
